--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,4 @@ project/boot/
 project/plugins/project/
 .scala_dependencies
 .worksheet
-target/
-lib_managed/
-src_managed/
-project/boot/
-.history
-.cache
+/.bsp/sbt.json
