--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ project/plugins/project/
 .worksheet
 /.bsp/sbt.json
 salesforce-message-handler.jar
+.bloop/
+.metals/
+.vscode/
+project/.bloop/
+metals.sbt
